# domain-api/incoming/src/image_management.rs
@@ -4,7 +4,7 @@ use thiserror::Error;
 
 use kani_domain_api_model::image_format::{ImageFormat, ImageFormatError};
 use kani_domain_api_model::image_id::ImageId;
-use kani_domain_api_model::import::ImportSessionId;
+use kani_domain_api_model::import::{ImportSession, ImportSessionId};
 use kani_domain_api_model::thumbnail::ThumbnailKind;
 use kani_domain_api_model::user::User;
 
@@ -13,6 +13,8 @@ pub trait ImageManagementService {
     async fn import_image(&self, user: &User, import_session_id: i64, image_name: String, image_data: Bytes) -> Result<(), ImportImageError>;
 
     async fn start_import_session(&self, user: &User) -> Result<ImportSessionId, StartImportSessionError>;
+
+    async fn get_import_sessions(&self, user: &User) -> Result<Vec<ImportSession>, GetImportSessionsError>;
 
     async fn get_image(&self, image_id: ImageId) -> Result<(Bytes, ImageFormat), GetImageError>;
 
@@ -47,6 +49,12 @@ pub enum GetImageError {
 
     #[error("Image not found: {0}")]
     ImageNotFound(ImageId),
+}
+
+#[derive(Error, Debug)]
+pub enum GetImportSessionsError {
+    #[error("Get import sessions internal server error: '{0}'")]
+    Unknown(#[from] anyhow::Error),
 }
 
 
